TM-12823 Enable transmit the host styles to the inner button

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -74,11 +74,7 @@
 					        (click)="onClearFilters()">
 					</tds-button>
 				</div>
-				<button tds-button
-				        icon="refresh"
-				        class="tds-button-icon component-action-reload pull-right"
-				        (click)="onReload()">
-				</button>
+				<tds-button [action]="IconActions.GenericRefresh" class="component-action-reload pull-righ" (click)="onReload()"></tds-button>
 			</div>
 		</ng-template>
 
