TM-12823 Changes styling view manager

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -69,7 +69,7 @@
 				<div>
 					<tds-button [action]="ButtonActions.FilterClear"
 							class="component-action-clear-filters"
-					        [id]="btnClean"
+					        id="btnClean"
 					        [disabled]="!hasFilterApplied()"
 					        (click)="onClearFilters()">
 					</tds-button>
