--- a/web-app/tds/web-app/css/shared/components/action.button.component.sass
+++ b/web-app/tds/web-app/css/shared/components/action.button.component.sass
@@ -5,6 +5,9 @@ $tds-action-button-icon-flat-color: #666
   display: flex
   justify-content: center
   position: relative
+  .tds-action-button--just-icon
+    i
+      font-size: 16px
   .tds-action-button
     border: 0;
     background-color: transparent;
