--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-selector/asset-explorer-view-selector.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-selector/asset-explorer-view-selector.component.html
@@ -44,7 +44,7 @@
                     <a (click)="onCreateNew(dataItem)" class="btn"><i class="fa fa-plus-square"></i> Create New</a>
                 </li>
                 <li>
-                    <ul style="padding-left:10px;margin-top:5px;" *ngFor="let value of dataItem.items">
+                    <ul style="padding-left:10px;margin-top:5px;word-wrap:break-word" *ngFor="let value of dataItem.items">
                         <a [routerLink]="['/asset','views',value.id,'show']" (click)="onFocusOut()">
                             <i class="fa fa-file-text-o"></i> {{value.name}}</a>
                     </ul>
