TM-12823 Remove icons enum

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/index/asset-explorer-index.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/index/asset-explorer-index.component.html
@@ -79,8 +79,9 @@
 										</td>
 
 										<td class="asset-explorer-td-favorite text-center tds-action-button-set">
-											<tds-button [action]="report.isFavorite ? IconActions.GenericIsFavorite : IconActions.GenericIsNotFavorite"
+											<tds-button [action]="report.isFavorite ? ButtonActions.GenericIsFavorite : ButtonActions.GenericIsNotFavorite"
 											            class="text-yellow"
+											            isIconButton="true"
 											            (click)="toggleFavorite(report)">
 											</tds-button>
 										</td>
