--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/index/asset-explorer-index.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/index/asset-explorer-index.component.html
@@ -28,16 +28,10 @@
 						<h3 class="box-title box-title-grid-list">{{selectedFolder?.name}}</h3>
                         <div class="box-tools-actions" *ngIf="isCreateAvailable()" style="vertical-align: super;">
 	                        <tds-button
-			                        [action]="ButtonActions.GenericCreate"
-			                        tooltip="Create View"
+			                        [action]="ButtonActions.ViewCreate"
 			                        class="btn-primary"
 			                        (click)="onCreateReport()">
 	                        </tds-button>
-	                        <!--
-                            <button (click)="onCreateReport()" class="btn btn-primary">
-                                <i class="fa fa-plus-square"></i> {{'GLOBAL.CREATE' | translate}}
-                            </button>
-                            -->
                         </div>
 						<div class="pull-right">
 							<div class="form-group has-feedback search-filter-text">
