--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/request/request-license.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/request/request-license.component.html
@@ -9,7 +9,7 @@
 				<div class="form-group">
 					<label for="inputContactEmail" class="col-sm-3 control-label">Contact Email: <span style="color: red;">*</span></label>
 					<div class="col-sm-9">
-						<input type="email" name="inputContactEmail" id="inputContactEmail" class="form-control" placeholder="Contact Email" [(ngModel)]="requestLicense.name" required [ngClass]="{'has-error': !licenseRequestForm.form.valid}">
+						<input type="email" name="inputContactEmail" id="inputContactEmail" class="form-control" placeholder="Contact Email" [(ngModel)]="requestLicense.email" email required>
 					</div>
 				</div>
 				<div class="form-group">
@@ -37,6 +37,7 @@
 							[(ngModel)]="requestLicense.project"
 							[textField]="'name'"
 							[valueField]="'id'"
+							(valueChange)="onProjectSelect($event)"
 							required
 							[ngClass]="{'has-error':  (licenseRequestForm.touched) && requestLicense.project == 0}">
 						</kendo-dropdownlist>
@@ -60,7 +61,7 @@
 		</form>
 	</div>
 	<div class="modal-footer form-group-center">
-		<button type="button" (click)="onSaveProvider()" class="btn btn-primary pull-left" [disabled]="!licenseRequestForm.form.valid || !isUnique ||  isEmptyValue()"><span class="fa fa-fw fa-floppy-o"></span> Save</button>
+		<button type="button" (click)="onCreateRequestLicense()" class="btn btn-primary pull-left" [disabled]="!licenseRequestForm.form.valid"><span class="fa fa-fw fa-floppy-o"></span> Submit Request</button>
 		<button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
 			<span class="glyphicon glyphicon-ban-circle"></span>
 			<span>{{'GLOBAL.CANCEL' | translate }}</span>
