TM-13622 Bind the email of the requestor

--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/created-license/created-license.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/created-license/created-license.component.html
@@ -8,7 +8,7 @@
 			<div class="box-body">
 				<blockquote>
 					<p>Congratulations!  Your License request has been submitted successfully.</p>
-					<p>The request has been sent to TDS for processing, and a license will be issued soon.  The license key will be emailed to the email contact ({{requestLicenseModel?.client?.email}}) specified in the request.  The email with the license key will contain the instructions for applying the license and unlocking all of the features of TransitionManager.</p>
+					<p>The request has been sent to TDS for processing, and a license will be issued soon.  The license key will be emailed to the email contact ({{requestLicenseModel?.email}}) specified in the request.  The email with the license key will contain the instructions for applying the license and unlocking all of the features of TransitionManager.</p>
 					<p>The license process typically takes one (1) business day to complete.</p>
 				</blockquote>
 			</div><!-- /.box-body -->
