TM-13544 - Prevented import batch record dialog from closing if only the popup was closed

--- a/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-dialog.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade in tds-ui-modal-decorator import-batch-record-dialog" id="import-batch-record-dialog" data-backdrop="static" tabindex="-1" role="dialog">
+<div tds-handle-escape (escPressed)="onCancelCloseDialog()" class="modal fade in tds-ui-modal-decorator import-batch-record-dialog" id="import-batch-record-dialog" data-backdrop="static" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content resizable"
              tds-ui-modal-decorator=""
