--- a/web-app/tds/web-app/css/elements/component/task-comment-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-comment-component.sass
@@ -1,7 +1,6 @@
 .task-comment-component
-  .task-content,
   .comment-content
-    margin-top: 10px
+    margin-top: 14px
   .task-comment-grid
     .k-grid-header.k-grid-dynamic-header
       position: relative
@@ -24,12 +23,12 @@
     span
       position: relative
       top: -1px
-  .btn-action
-    height: 28px
-    width: 59px
-    .fa,
-    .glyphicon
-      font-size: 14px
+  //.btn-action
+  //  height: 28px
+  //  width: 59px
+  //  .fa,
+  //  .glyphicon
+  //    font-size: 14px
   .single-right-btn-action
     text-align: right
     margin-right: 3px
