--- a/web-app/tds/web-app/css/shared/components/action-button.component.sass
+++ b/web-app/tds/web-app/css/shared/components/action-button.component.sass
@@ -18,6 +18,10 @@ $tds-action-button-icon-flat-color: #666
     span
       display: none
 
+tds-button[class^="btn-"],
+tds-button[class^="btn-"]:hover
+  background-color: unset
+
 .tds-action-button
   i
     font-size: 16px
@@ -36,6 +40,15 @@ $tds-action-button-icon-flat-color: #666
   i
     font-size: 22px
 
+
+// button on toolbar
+.k-grid-toolbar
+  .tds-action-button,
+  button
+    padding: 5px 11px
+  .button-header-grid
+    padding: 2px 8px
+
 // Match the first tds-button with an icon set belonging to a btn-group
 .btn-group > tds-button:not([icon=""]) button:first-child()
   padding-top: 5px
@@ -44,3 +57,7 @@ $tds-action-button-icon-flat-color: #666
   tds-button + .dropdown-toggle
     width: 31px
     margin-left: -1px
+
+.modal-footer
+  .asset-commands
+    display: inline
