--- a/web-app/tds/web-app/css/style.sass
+++ b/web-app/tds/web-app/css/style.sass
@@ -32,7 +32,7 @@
 @import "shared/components/date-range-selector.component"
 @import "shared/components/password-change.component"
 @import "shared/components/number-control.component"
-@import "shared/components/action.button.component"
+@import "shared/components/action-button.component"
 @import "shared/components/bulk-change-counter"
 // Specific Module Layout/Components
 @import "shared/directives/tds-ui-prompt"
