--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/request/request-license.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/request/request-license.component.html
@@ -1,4 +1,4 @@
-<div tds-autofocus class="modal-content data-script-view-edit-component"  #licenseViewEditContainer>
+<div tds-autofocus class="modal-content data-script-view-edit-component">
 	<div class="modal-header">
 		<button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
 		<h4 class="modal-title">{{ 'LICENSE.REQUEST_NEW_LICENSE' | translate }}</h4>
