--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/detail/license-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/detail/license-detail.component.html
@@ -104,7 +104,10 @@
 		</form>
 	</div>
 	<div class="modal-footer form-group-center">
-		<button type="button" (click)="onCreateRequestLicense()" class="btn btn-primary pull-left" [disabled]="!licenseRequestForm.form.valid"><span class="fa fa-fw fa-floppy-o"></span> Submit Request</button>
+        <button *ngIf="licenseModel.status !== licenseStatus.ACTIVE" type="button" class="btn btn-primary pull-left" (click)="applyLicenseKey()"><i class="fa fa-fw fa-key"></i> Apply License Key</button>
+        <button *ngIf="licenseModel.status !== licenseStatus.ACTIVE" type="button" class="btn btn-primary pull-left" (click)="resubmitLicenseRequest()"><span class="glyphicon glyphicon-share-alt"></span> Resubmit Request</button>
+        <button *ngIf="licenseModel.status !== licenseStatus.ACTIVE" type="button" class="btn btn-primary pull-left" (click)="manuallyRequest()"><i class="fa fa-fw fa-envelope"></i> Manually Submit Request</button>
+        <button type="button" class="btn btn-danger" [ngClass]="{'pull-left': licenseModel.status === licenseStatus.ACTIVE}" (click)="deleteLicense()"><span class="glyphicon glyphicon-trash"></span> Delete License</button>
 		<button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
 			<span class="glyphicon glyphicon-ban-circle"></span>
 			<span>{{'GLOBAL.CANCEL' | translate }}</span>
