TM-13622 Fix small issue on the Apply Component

--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/apply-key/apply-key.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/apply-key/apply-key.component.html
@@ -16,7 +16,7 @@
 					</div>
 					<div class="form-group">
 						<div class="col-sm-12">
-							<textarea id="licenseKeyText" name="licenseKeyText" class="form-control" rows="8" [(ngModel)]="licenseModel.key" placeholder="Paste license key text here" required></textarea>
+							<textarea id="licenseKeyText" name="licenseKeyText" class="form-control" rows="8" [(ngModel)]="licenseKey" placeholder="Paste license key text here" required></textarea>
 						</div>
 					</div>
 				</form>
