--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/manual-request/manual-request.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/manual-request/manual-request.component.html
@@ -26,7 +26,7 @@
 				<button [copy-clipboard]="licenseEmail.body" type="button" class="btn btn-primary"><i class="fa fa-fw fa-cut"></i> Copy to Clipboard</button>
 				<button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
 					<span class="glyphicon glyphicon-ban-circle"></span>
-					<span>{{'GLOBAL.CANCEL' | translate }}</span>
+					<span>{{'GLOBAL.CLOSE' | translate }}</span>
 				</button>
 			</div>
 		</div>
