TM-12822 Fix Improve the icons and spacing within the Asset Edit CRUD screens

--- a/web-app/tds/web-app/css/shared/components/action-button.component.sass
+++ b/web-app/tds/web-app/css/shared/components/action-button.component.sass
@@ -15,7 +15,7 @@ $tds-action-button-icon-flat-color: #666
     padding: 0 2px;
     i
       color: $tds-action-button-icon-flat-color
-    span
+    span.title
       display: none
 
 tds-button[class^="btn-"],
@@ -35,7 +35,7 @@ tds-button[class^="btn-"]:hover
   outline: 0
   vertical-align: middle
   margin: 0 10px
-  span
+  span.title
     display: none
   i
     font-size: 22px
