--- a/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/create/task-create.component.html
@@ -451,7 +451,7 @@
                 <button class="btn btn-primary pull-left"
                         [disabled]="isFormInvalid() || !hasEditTaskPermission" (click)="onCreate()" type="button">
                     <i  class="fa fa-fw fa-floppy-o"></i>
-                    <span>Update</span>
+                    <span>Save</span>
                 </button>
                 <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
                     <i class="glyphicon glyphicon-ban-circle action-button"></i>
