TM-13731 Added style to bump the label to right a bit

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -64,7 +64,7 @@
 				<div class="checkbox just-planning">
 					<input id="justPlanning" type="checkbox" (change)="onChangeJustPlanning($event.currentTarget.checked)"
 					       [(ngModel)]="justPlanning" name="justPlanning" class="component-action-just-planning">
-					<label>Just Planning</label>
+					<label style="margin-left: 4px;">Just Planning</label>
 				</div>
 			</div>
 			<div class="col-sm-6 filters-section">
