TM-13575 Fix Fix the ANY/ALL toggle control to remove the bleed-over in a few places

--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -6,14 +6,9 @@
     display: inline-block
     margin: 2px
     width: unset
-
   .asset-tag-selector-component
     .k-switch.asset-tag
-      display: block
-      position: unset
-      float: unset
-      top: 0
-      right: 0
+      top: 5.6px
     .k-multiselect-wrap
       border: 0
   .bulkchange-section
